fix: donate z-index

--- a/src/components/Donate/index.css
+++ b/src/components/Donate/index.css
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 10px;
   right: 10px;
+  z-index: 1000;
 }
 .donate-content {
   /* height: 200px; */
